# model/product.go
@@ -1,12 +1,17 @@
 package model
 
+import "oos/dto"
+
 type Product struct {
-	Code      string  `json:"code" bson:"code"`
-	Name      string  `json:"name" bson:"name"`
-	Origin    string  `json:"origin" bson:"origin"`
-	Price     float64 `json:"price" bson:"price"`
-	Limit     int     `json:"limit" bson:"limit"`
-	CanOrder  bool    `json:"canOrder" bson:"canOrder"`
-	CanView   bool    `json:"canView" bson:"canView"`
-	CreatedAt int64   `json:"createdAt" bson:"createdAt"`
+	CreatedAt  int64          `json:"createdAt" bson:"createdAt"`
+	UpdatedAt  int64          `json:"updatedAt" bson:"updatedAt"`
+	UserOrders map[string]int `json:"userOrders" bson:"userOrders"`
+	ProductView
+}
+
+type ProductView struct {
+	RatingSum   float32 `json:"ratingSum" bson:"ratingSum"`
+	LikeCount   int     `json:"likeCount" bson:"likeCount"`
+	ReviewCount int     `json:"reviewCount" bson:"reviewCount"`
+	dto.ProductCreate
 }
